--- a/agrosolo/src/App.css
+++ b/agrosolo/src/App.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: white; /* Fundo branco da página */
+  background-color: rgb(110, 0, 0); /* Fundo branco da página */
 }
 
 .app-container {
